--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -115,13 +115,33 @@
     </table>
 
     <div id="menu">
-      <button type="button">Save</button>
-      <button type="button">Load</button>
-      <button type="button">Search</button>
+      <button
+        data-action="save"
+        type="button"
+      >
+        Save
+      </button>
+      <button
+        data-action="load"
+        type="button"
+      >
+        Load
+      </button>
+      <button
+        data-action="search"
+        type="button"
+      >
+        Search
+      </button>
     </div>
 
     <script>
       class Menu {
+        constructor(elem) {
+          this._elem = elem;
+          elem.onclick = this.onClick.bind(this);
+        }
+
         save() {
           console.log("saving");
         }
@@ -141,6 +161,8 @@
           }
         }
       }
+
+      new Menu(document.getElementById("menu"));
 
       const table = document.getElementById("bagua-table");
       let selectedId;
