Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -138,7 +138,7 @@
     <script>
       class Menu {
         constructor(elem) {
-          this._elem = elem;
+          // this._elem = elem;
           elem.onclick = this.onClick.bind(this);
         }
 
