Intro to browser events

--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -135,6 +135,8 @@
       </button>
     </div>
 
+    <h3>The behavior patter</h3>
+
     <script>
       class Menu {
         constructor(elem) {
