--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -146,15 +146,17 @@
 
         save() {
           console.log("saving");
-          alert("Saving...")
+          alert("Saving...");
         }
 
         load() {
           console.log("loading");
+          alert("Loading...");
         }
 
         search() {
           console.log("searching");
+          alert("Searching...");
         }
 
         onClick(e) {
