--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -137,6 +137,8 @@
 
     <h3>The behavior patter</h3>
 
+    <h4>Behavior: Toggle</h4>
+
     <script>
       class Menu {
         constructor(elem) {
