--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -153,6 +153,9 @@
         if (!target.dataset.toggleId) {
           return;
         }
+
+        const form = document.getElementById(target.dataset.toggleId);
+        form.hidden = !form.hidden
       });
 
       class Menu {
