--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/index.html
@@ -155,7 +155,7 @@
         }
 
         const form = document.getElementById(target.dataset.toggleId);
-        form.hidden = !form.hidden
+        form.hidden = !form.hidden;
       });
 
       class Menu {
