--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/hide-messages-with-delegation.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/hide-messages-with-delegation.html
@@ -2,7 +2,43 @@
 <html>
   <head>
     <style>
-      
+      body {
+        margin: 10px auto;
+        width: 470px;
+      }
+
+      h3 {
+        margin: 0;
+        padding-bottom: 0.3rem;
+        padding-right: 20px;
+        font-size: 1.1em;
+      }
+
+      p {
+        margin: 0;
+        padding: 0 0 0.5em;
+      }
+
+      .pane {
+        background-color: #edf5e1;
+        padding: 10px 20px 10px;
+        border-top: 2px solid #c4df9b;
+        position: relative;
+      }
+
+      .remove-button {
+        position: absolute;
+        font-size: 110%;
+        display: block;
+        color: darkred;
+        width: 24px;
+        height: 24px;
+        border: none;
+        right: 10px;
+        background-color: transparent;
+        cursor: pointer;
+        top: 0;
+      }
     </style>
   </head>
   <body>
