--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tree-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tree-menu.html
@@ -49,7 +49,10 @@
       const tree = document.getElementById('tree');
 
       tree.addEventListener("click", function(e) {
-        console.log(e.target);
+        const ul = e.target.querySelector("ul");
+        if (ul) {
+          ul.hidden = !ul.hidden
+        }
       });
     </script>
   </body>
