--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tree-menu.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tree-menu.html
@@ -59,8 +59,10 @@
       }
 
       tree.addEventListener("click", function(e) {
+        if (e.target.nodeName !== 'SPAN') {
+          return;
+        }
         const ul = e.target.nextSibling;
-
         if (ul) {
           ul.hidden = !ul.hidden
         }
