--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <style>
-      
+
     </style>
   </head>
   <body>
+    <table id="grid">
+
+    </table>
+      <thead>
+        <tr>
+          <th data-type="string">Age</th>
+          <th data-type="number">Name</th>
+        </tr>
+      </thead>
     <script>
       console.log("sortable table");
     </script>
