--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
@@ -7,14 +7,36 @@
   </head>
   <body>
     <table id="grid">
-
-    </table>
       <thead>
         <tr>
           <th data-type="string">Age</th>
           <th data-type="number">Name</th>
         </tr>
       </thead>
+      <tbody>
+        <tr>
+          <td>5</td>
+          <td>John</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Pete</td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>Ann</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>Eugene</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Ilya</td>
+        </tr>
+      </tbody>
+    </table>
+      
     <script>
       console.log("sortable table");
     </script>
