--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <style>
+      table {
+        border-collapse: collapse;
+      }
 
+      th, td {
+        border: 1px solid black;
+        padding: 4px;
+      }
     </style>
   </head>
   <body>
