--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
@@ -10,6 +10,14 @@
         border: 1px solid black;
         padding: 4px;
       }
+
+      th {
+        cursor: pointer;
+      }
+
+      th:hover {
+        background-color: yellow;
+      }
     </style>
   </head>
   <body>
