--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table.html
@@ -75,7 +75,15 @@
             return 0;
           }));
         } else if (type === "string") {
+          table.tBodies[0].append(...rows.sort(function(rowA, rowB) {
+            const a = rowA.cells[index].innerHTML.toLowerCase();
+            const b = rowB.cells[index].innerHTML.toLowerCase();
+            console.log(a, b);
 
+            if (a < b) return -1;
+            if (a > b) return 1;
+            return 0
+          }));
         }
       });
     </script>
