--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/sortable-table-2.html
@@ -53,7 +53,39 @@
     </table>
       
     <script>
-      console.log("sortable table");
+      const table = document.getElementById("grid");
+
+      table.onclick = function(e) {
+        if (e.target.tagName !== 'TH') {
+          return;
+        }
+
+        const type = e.target.dataset.type;
+        const index = e.target.cellIndex;        
+        sortTable(type, index);
+      }
+
+      function sortTable(type, index) {
+        const tbody = table.querySelector("tbody");
+        const rowsArray = Array.from(tbody.rows);
+
+        let compare;
+
+        switch(type) {
+          case "number":
+            compare = function (rowA, rowB) {
+              return rowA.cells[index].innerHTNL - rowB.cells[index].innerHTNL;
+            };
+            break;
+          case "string":
+            compare = function (rowA, rowB) {
+              return rowA.cells[index].innerHTNL > rowB.cells[index].innerHTNL
+                ? -1 : 1;
+            };
+            break;
+        }
+        console.log(type, index);
+      }
     </script>
   </body>
 </html>
