--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
@@ -26,11 +26,21 @@
         height: 16px;
         background-color: black;
       }
+
+      .food {
+        position: absolute;
+        left: 100px;
+        top: 0;
+        width: 16px;
+        height: 16px;
+        background-color: black;
+      }
     </style>
   </head>
   <body>
     <div id="container">
       <div id="snake"></div>
+      <div class="food"></div>
     </div>
 
     <script>
