--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
@@ -56,8 +56,9 @@
         const styles = getComputedStyle(snake);
         const snakeCoords = snake.getBoundingClientRect();
 
-        if (snakeCoords.right >= foodCoords.left) {
+        if (food.offsetParent && snakeCoords.right >= foodCoords.left) {
           console.log("snakeCoords: " + snakeCoords.right + ", foodCoords: " + foodCoords.left);
+          food.remove();
         }
 
         if (horizontal) {
