--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/snake-game.html
@@ -57,6 +57,8 @@
         const snakeCoords = snake.getBoundingClientRect();
 
         if (food.offsetParent && snakeCoords.right >= foodCoords.left) {
+          snake.style.width = snake.getBoundingClientRect().width + 16 + "px";
+          // console.log(snake.getBoundingClientRect().width);
           console.log("snakeCoords: " + snakeCoords.right + ", foodCoords: " + foodCoords.left);
           food.remove();
         }
