--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        background-color: lightslategray;
+      }
+    </style>
+  </head>
   <body>
+    <p>
+      LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
+    </p>
+    <p>
+      LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
+    </p>
+    
     <script>
       console.log("Tooltip behavior");
     </script>
