--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -14,7 +14,14 @@
     <p>
       LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
     </p>
-    
+
+    <button data-tooltip="The Tooltip is longer than the element">
+      Short button
+    </button>
+    <button data-tooltip="HTML<br />Tooltip">
+      One more button
+    </button>
+
     <script>
       console.log("Tooltip behavior");
     </script>
