--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -9,6 +9,9 @@
       .tooltip {
         position: fixed;
         padding: 10px 20px;
+        border-radius: 4px;
+        text-align: center;
+        font: italic 14px/1.3 sans-serif;
         border: 1px solid #b3c9ce;
       }
     </style>
