--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -13,6 +13,7 @@
         text-align: center;
         font: italic 14px/1.3 sans-serif;
         border: 1px solid #b3c9ce;
+        color: #333;
       }
     </style>
   </head>
