--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        /* background-color: lightslategray; */
+        background-color: lightgreen;
         height: 2000px;
       }
 
