--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -57,6 +57,10 @@
         if (!target.dataset.tooltip) {
           return;
         }        
+        const tooltip = document.createElement("div");
+        tooltip.className = "tooltip";
+        tooltip.innerHTML = target.dataset.tooltip;
+        document.body.append(tooltip);
       }
 
       document.onmouseout = function(e) {
