--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior.html
@@ -62,9 +62,13 @@
         tooltip.className = "tooltip";
         tooltip.innerHTML = target.dataset.tooltip;
         document.body.append(tooltip);
-        
-        tooltip.style.top = buttonCoords.top - 5 + "px";
-        console.log(tooltip.getBoundingClientRect());
+
+        tooltip.style.top = buttonCoords.top - tooltip.offsetHeight - 5 + "px";
+        const tooltipCoords = tooltip.getBoundingClientRect();
+
+        if (tooltipCoords.top < 0) {
+          tooltip.style.top = buttonCoords.bottom + 5 + "px";
+        }
       }
 
       document.onmouseout = function(e) {
