--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <style>
+      body {
+        background-color: lightslategrey;
+        height: 2000px;
+      }
+    </style>
   </head>
   <body>
+    <p>
+      LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
+    </p>
+    <p>
+      LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
+    </p>
     <script>
       console.log("ola, tudo bem?");
     </script>
