--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
@@ -15,6 +15,19 @@
     <p>
       LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa LaLaLa
     </p>
+
+    <button data-tooltip="the tooltip is longer than the element">
+      Short button
+    </button>
+
+    <button data-tooltip="HTML<br>tooltip">
+      One more button
+    </button>
+
+    <p>
+      Scroll the page to make buttons appear on the top, 
+      check if the tooltips show up correctly.
+    </p>
     <script>
       console.log("ola, tudo bem?");
     </script>
