--- a/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
+++ b/part-2-browser-document-events-interfaces/introduction-to-events/event-delegation/tasks/tooltip-behavior-2.html
@@ -52,6 +52,11 @@
         if (!target.dataset.tooltip) {
           return;
         }
+
+        if (tooltip) {
+          tooltip.remove();
+          tooltip = null;
+        }
       }
     </script>
   </body>
